force-app/main/default/objects/Player_Season_Stats__c/Player_Season_Stats__c.object-meta.xml
<CustomObject>
    <label>Player Season Stats</label>
    <pluralLabel>Player Season Stats</pluralLabel>
    <nameField>
        <displayFormat>PSS-{0000}</displayFormat>
        <label>Player Season Stats Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Aggregated season statistics per player</description>
</CustomObject>