force-app/main/default/objects/Player_Season_Stats__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Player Season Stats</relationshipLabel>
    <relationshipName>Player_Season_Stats</relationshipName>
    <required>true</required>
    <description>The player these statistics belong to</description>
</CustomField>