force-app/main/default/objects/Player_Season_Stats__c/fields/Penalties__c.field-meta.xml
<CustomField>
    <fullName>Penalties__c</fullName>
    <label>Penalties</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of penalties in the season</description>
</CustomField>