force-app/main/default/objects/Player_Season_Stats__c/fields/Penalty_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Minutes__c</fullName>
    <label>Penalty Minutes</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total penalty minutes in the season</description>
</CustomField>