force-app/main/default/objects/Player_Season_Stats__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <formula>Goals__c + Assists__c</formula>
    <description>Total points (Goals + Assists)</description>
</CustomField>