force-app/main/default/objects/Player_Season_Stats__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Season</label>
    <type>Lookup</type>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Player Season Stats</relationshipLabel>
    <relationshipName>Player_Season_Stats</relationshipName>
    <required>true</required>
    <description>The season these statistics are for</description>
</CustomField>