force-app/main/default/objects/Player_Season_Stats__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Lookup</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Player Season Stats</relationshipLabel>
    <relationshipName>Player_Season_Stats</relationshipName>
    <description>The team the player played for</description>
</CustomField>